@@ -1,3 +1,8 @@
+1999-05-12  Martin Baulig  <martin@home-of-linux.org>
+
+	* canonicalize.c: Use `set_errno' instead of `__set_errno' and
+	define `set_errno' here.
+
 1999-03-27  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* Makefile.am (supportexecincludedir): Rename from
